[package]
name = "exhash"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Verified line-addressed file editor using lnhash addresses"

[lib]
name = "exhash"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "exhash"
path = "src/bin/exhash.rs"

[[bin]]
name = "lnhashview"
path = "src/bin/lnhashview.rs"

[dependencies]
regex = "1.7.1"
pyo3 = { version = "0.23", optional = true }

[features]
extension-module = ["pyo3", "pyo3/extension-module"]
