[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "exhash"
version = "0.1.1"
description = "Verified line-addressed file editor using lnhash addresses"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.8"
readme = "README.md"
authors = [{name = "Jeremy Howard", email = "j@fast.ai"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/exhash"
Repository = "https://github.com/AnswerDotAI/exhash"
Issues = "https://github.com/AnswerDotAI/exhash/issues"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "exhash.exhash"
data = "python/exhash.data"
